scripts/kustomize/base/istio-policies/istio-peer-auth-only-mtls-dev.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: only-mtls-peer-dev
  namespace: dev
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  mtls:
    mode: STRICT
