scripts/kustomize/base/istio-policies/istio_auth_allow_istio_to_dev.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-istio-to-dev
  namespace: dev
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["istio-system"]
