scripts/kustomize/base/istio-policies/istio_auth_deny_all_dev.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
 name: allow-nothing-dev
 namespace: dev
spec:
  {}
