scripts/kustomize/base/istio-policies/istio_authpolicy_allow-dev-to-dev.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-dev-to-dev
  namespace: dev
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["dev"]
